--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -343,7 +343,7 @@
   </div>
 </clr-modal>
 
-<clr-modal [(clrModalOpen)]="modalFinish" [style.height.px]="500" [clrModalClosable]="false">
+<clr-modal [(clrModalOpen)]="modalFinish" [style.height.px]="500">
   <div class="modal-body">
     <div class="clr-row">
       <div class="clr-col-12">
