--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -89,9 +89,9 @@
       </div>
 
       <div class="clr-col-7">
-        <input style="margin: 5px;" type="radio" name="gender" value="male" class="clr-radio" [(ngModel)]="gender" />
+        <input style="margin: 5px;" type="radio" name="gender" value="MALE" class="clr-radio" [(ngModel)]="gender" />
         <label>{{'Male' | translate}}</label>
-        <input style="margin: 5px;" type="radio" name="gender" value="female" class="clr-radio" [(ngModel)]="gender" />
+        <input style="margin: 5px;" type="radio" name="gender" value="FEMALE" class="clr-radio" [(ngModel)]="gender" />
         <label>{{'Female' | translate}}</label>
         <input style="margin: 5px;" type="radio" name="gender" value="other" class="clr-radio" [(ngModel)]="gender" />
         <label>{{'Other' | translate}}</label>
